# vtk-python-examples

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/: schema.json
docs/: gallery.md  index.md  navigation.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/.vitepress/components/: ExampleGallery.vue  RandomHero.vue  SpiralGallery.vue
docs/.vitepress/theme/: custom.css  index.mjs
scripts/: add_pipeline_arrows.py  fix_md_files.py  generate_examples_jsonl.py  remove_named_colors.py
src/Python/Annotation/: BillboardTextActor3D.md  BillboardTextActor3D.py  CaptionActor2D.md  CaptionActor2D.py  CornerAnnotation.md  CornerAnnotation.py  CubeAxesActor.md  CubeAxesActor.py  LegendBoxActor.md  LegendBoxActor.py  MultiLineText.md  MultiLineText.py  ScalarBarActor.md  ScalarBarActor.py  TextOrigin.md  TextOrigin.py
src/Python/Arrays/: ArrayCalculator.md  ArrayCalculator.py  CreateArray.md  CreateArray.py  NormalsVisualization.md  NormalsVisualization.py
src/Python/CompositeData/: CompositePolyDataMapper.md  CompositePolyDataMapper.py  ExtractBlock.md  ExtractBlock.py  MultiBlockDataSet.md  MultiBlockDataSet.py  OverlappingAMR.md  OverlappingAMR.py  PartitionedDataSet.md  PartitionedDataSet.py  PartitionedDataSetCollection.md  PartitionedDataSetCollection.py
src/Python/DataManipulation/: LineOnMesh.md  LineOnMesh.py  MeshLabelImageColor.md  MeshLabelImageColor.py
src/Python/ExplicitStructuredGrid/: CreateESGrid.md  CreateESGrid.py  LoadESGrid.md  (+1 more)
src/tests/: run_all_tests.py  test_examples.py  test_manifest.json  vtk_test_utils.py
(+1405 files in other folders)
